Thu Feb 26 19:29:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (hash_foreach_iter): fix for prototype.

Thu Feb 26 18:36:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (INSNS, newline.c, miniprelude.c, prelude.c),
	  (node_name.inc, known_errors.inc): unified from Makefile.in and
	  win32/Makefile.sub.

Thu Feb 26 13:30:34 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* util.c (valid_filename): use our own implementation of open(),
	  close() and unlink().

Thu Feb 26 13:23:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (cdhash_each): resurrects internal literals.

Thu Feb 26 10:56:48 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (rb_w32_wopen): prototype forgotten.

	* io.c (rb_sysopen_internal): shouldn't replace undefined chars in this
	  case.

Thu Feb 26 01:34:38 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: more MSG_* constants.

Thu Feb 26 00:21:21 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_level): extracted from sockopt_level_m.
	  (sockopt_optname): extracted from sockopt_optname_m.
	  (sockopt_data): apply StringValue.
	  (sockopt_s_linger): new method.
	  (sockopt_linger): new method.
	  (inspect_linger): show onoff value if it is neither 0 nor 1.

Wed Feb 25 23:23:03 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_unix_rights): raise
	  NotImplementedError if no fd passing feature.
	  (ancillary_timestamp): raise NotImplementedError if no timestamp
	  feature.
	  
Wed Feb 25 23:18:53 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_s_unix_rights): new method.

Wed Feb 25 23:01:26 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (unix_recv_io): prevent FD leak when 2 fd is
	  sent on LP64 platform.

	* ext/socket/rubysocket.h (rsock_discard_cmsg_resource): declared.

	* ext/socket/ancdata.c (rsock_discard_cmsg_resource): renamed from
	  discard_cmsg_resource.  export it.
