@@ -73,22 +73,9 @@ class TestSocket < Test::Unit::TestCase
     }
   end
 
-  def tcp_unspecified_to_loopback(addrinfo)
-    if addrinfo.ipv4? && addrinfo.ip_address == "0.0.0.0"
-      Addrinfo.tcp("127.0.0.1", addrinfo.ip_port)
-    elsif addrinfo.ipv6? && addrinfo.ipv6_unspecified?
-      Addrinfo.tcp("::1", addrinfo.ip_port)
-    elsif addrinfo.ipv6? && (ai = addrinfo.ipv6_to_ipv4) && ai.ip_address == "0.0.0.0"
-      Addrinfo.tcp("127.0.0.1", addrinfo.ip_port)
-    else
-      addrinfo
-    end
-  end
-
   def test_tcp
     TCPServer.open(0) {|serv|
-      addr = serv.local_address
-      addr = tcp_unspecified_to_loopback(addr)
+      addr = serv.connect_address
       addr.connect {|s1|
         s2 = serv.accept
         begin
@@ -185,7 +172,7 @@ class TestSocket < Test::Unit::TestCase
           tcp_servers = Socket.tcp_server_sockets(0)
           unix_server = Socket.unix_server_socket("#{tmpdir}/sock")
           tcp_servers.each {|s|
-            addr = tcp_unspecified_to_loopback(s.local_address)
+            addr = s.connect_address
             clients << addr.connect
           }
           clients << unix_server.local_address.connect
