@@ -1,3 +1,7 @@
+Thu Feb 26 23:14:46 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/lib/socket.rb (BasicSocket#connect_address): new method.
+
 Thu Feb 26 19:29:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* hash.c (hash_foreach_iter): fix for prototype.
